[styles/screen] fix footer text alignment with main text in sheet-less mode

--- a/styles/mobile.styl
+++ b/styles/mobile.styl
@@ -178,5 +178,8 @@
     vertical-align: -0.16em;
  body > footer
   margin-top: 0.625em;
+  unless $sheet-metaphor
+   padding-left: 0;
+   padding-right: 0;
   text-align: center;
   line-height: 1.25em;
