--- a/styles/screen.styl
+++ b/styles/screen.styl
@@ -291,5 +291,7 @@ body > footer
   text-shadow: 1px 1px $outer-text-shadow;
  else
   margin-top: 1.25em;
+  padding-left: ($width-header-plus / 2);
+  padding-right: ($width-header-plus / 2);
 
 @import "mobile"
